# Chat

./: CMakeLists.txt  README.md  build.bat  build.sh
client/: ChatClient.cpp  ChatClient.h  ChatPeer.cpp  ChatPeer.h  main.cpp
exe/: client1.bat  client1.sh  client2.bat  client2.sh  client3.bat  client3.sh  rootca.crt  server.bat  server.sh
exe/client1/: client
exe/server1/: server  user.crt  user.key
general/include/: ChatMessage.h  CommandLine.h  Singleton.h  StrOperations.h  config.h
general/src/: ChatMessage.cpp  CommandLine.cpp  StrOperations.cpp
keys/: dh2048.pem
openssl/include/openssl/: opensslv.h
openssl/lib/: libcrypto.lib  libssl.lib
server/: ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  main.cpp
